Fix teaser styling on mobile

--- a/public/themes/custom/julkaisut/assets/styles/components/teaser.scss
+++ b/public/themes/custom/julkaisut/assets/styles/components/teaser.scss
@@ -4,9 +4,16 @@
   position: relative;
 
   &__link {
-    display: block;
     text-decoration: none;
     color: inherit;
+    display: grid;
+    height: 100%;
+    grid-template-areas:
+      "image"
+      "title"
+      "date"
+      "arrow";
+    grid-template-rows: auto auto 1fr auto;
 
     &:hover,
     &:focus {
@@ -77,7 +84,6 @@
 
   @include mq($until: medium) {
     &__link {
-      display: grid;
       grid-template-areas:
         "image title"
         "image date"
@@ -109,16 +115,4 @@
 // Align arrows to the bottom of a teaser
 .cell > .teaser {
   height: 100%;
-
-  .teaser__link {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-  }
-
-  .teaser__arrow {
-    flex: 1 0 auto;
-    display: flex;
-    align-items: flex-end;
-  }
 }
